[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "graphfoundationmodels"
dependencies = [
    'numpy',
    'pandas',
    'torch',
    'tsl',
    'pytorch_lightning',
    'torchvision',
    'torch_geometric',
    'torch-spatiotemporal',
    'torch_sparse'
]
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Ben Pierce", email = "pierce@case.edu" }]
version = "2024.07.03"

[project.optional-dependencies]
test = ["pytest"]


[tool.setuptools.packages.find]
include = ["graphfoundationmodels*"]

[tool.setuptools_scm]